--- a/src/FileServiceTest/Plugin.FileService.NET.Test/Plugin.FileService.NET.Test.csproj
+++ b/src/FileServiceTest/Plugin.FileService.NET.Test/Plugin.FileService.NET.Test.csproj
@@ -50,6 +50,8 @@
   <ItemGroup>
     <Compile Include="FileServiceTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="EncryptDecryptTest.cs" />
+    <Compile Include="UTHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
