--- a/src/FileServiceTest/Plugin.FileService.NET.Test/Plugin.FileService.NET.Test.csproj
+++ b/src/FileServiceTest/Plugin.FileService.NET.Test/Plugin.FileService.NET.Test.csproj
@@ -44,20 +44,21 @@
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\MSTest.TestFramework.1.1.18\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Plugin.EncryptDecrypt.Abstractions, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\BiT21.CrossPlatform.Plugin.EncryptDecrypt.1.0.1-alpha\lib\net45\Plugin.EncryptDecrypt.Abstractions.dll</HintPath>
+      <HintPath>..\..\packages\BiT21.CrossPlatform.Plugin.EncryptDecrypt.1.0.2-alpha\lib\net45\Plugin.EncryptDecrypt.Abstractions.dll</HintPath>
     </Reference>
     <Reference Include="Plugin.EncryptDecrypt.NET, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\BiT21.CrossPlatform.Plugin.EncryptDecrypt.1.0.1-alpha\lib\net45\Plugin.EncryptDecrypt.NET.dll</HintPath>
+      <HintPath>..\..\packages\BiT21.CrossPlatform.Plugin.EncryptDecrypt.1.0.2-alpha\lib\net45\Plugin.EncryptDecrypt.NET.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileServiceTest.cs" />
+    <Compile Include="FileServiceWithEncryptionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UTHelper.cs" />
   </ItemGroup>
