--- a/src.NetStandard/FileService.Core.Test/BiT21.FileService.Test.csproj
+++ b/src.NetStandard/FileService.Core.Test/BiT21.FileService.Test.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FileService.NetStandard20\FileService.NetStandard20.csproj" />
+    <ProjectReference Include="..\FileService.NetStandard20\BiT21.FileService.csproj" />
   </ItemGroup>
 
 </Project>
